--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "postinstall": "prisma generate",
     "dev": "next dev",
     "build": "prisma generate && next build",
+    "bun:build": "bun build src/app/page.tsx --outdir .next",
     "start": "next start",
     "lint": "next lint"
   },
@@ -57,7 +58,7 @@
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "7.45.0",
     "react-redux": "^9.1.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.13.3",
